# AgentForge

./: README.md  pyproject.toml
agentforge/: README.md  __init__.py
agentforge/agents/: __init__.py  capability_router.py  graph.py  handoff.py  integrator.py  orchestrator.py  router.py  state.py
agentforge/api/: deps.py  main.py  router.py  schemas.py
agentforge/cache/: connection.py  redis_store.py
agentforge/core/: config.py  constants.py  env.py  jdk.py  logging.py  pools.py  registry.py
agentforge/db/: __init__.py  connection.py  meta_store.py  pgvector_util.py  vector_store.py
agentforge/plugins/: __init__.py  base.py  entity_resolver.py  spring_boot.py  spring_boot_meta.py
agentforge/rag/: __init__.py  chunker.py  codegen_error_memory.py  constants.py  embeddings.py  indexer.py  retriever.py  snapshots.py
document/: Spring Boot各版本.md  对话编程场景示例.md  服务启停.md
frontend/: index.html  package-lock.json  package.json
sandbox/: README.md
scripts/: index_rag_corpus.py  init_databases.py  run_api.sh  verify_agents.py  verify_api.py  verify_capabilities.py  verify_capability_conversation.py  verify_capability_generator.py  verify_capability_policy.py  verify_codegen_stages.py  verify_context.py  verify_e2e_crud.py  verify_meta_db.py  verify_models.py  verify_rag.py  verify_redis.py  verify_sandbox.py  verify_skeleton.py  verify_snapshots.py  verify_spring_domains.py  verify_vector_db.py
sql/: init_agentforge.sql  init_agentforge_meta.sql  init_meta_schema.sql  init_vector_schema.sql  migrate_rag_embedding_dim.sql
templates/: README.md
(+53 files in other folders)
