[project]
name = "agentforge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.4.0",
    "psycopg-pool>=3.2.0",
    "redis>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=1.4.7,<2.0.0",
    "langgraph>=1.2.0,<1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentforge"]
